--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ asdasd
     </head>
     <body>
         <div class="header">
-            <h1>Welcome to Antonio's Tacos!asasdasdasd</h1>
+            <h1>Welcome to Antonio's Tacos!ssssss</h1>
         </div>
         <div class="content">
             <p>Experience the taste of our authentic Mexican cuisine! Our tacos are made with the freshest ingredients and traditional recipes.</p>
